Added menu navigation bar and associated stylings.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
   </head>
 
   <body>
+    <header>
+      <h1>The Doghouse</h1>
+      <%= render 'layouts/menu' %> <!-- Render the menu partial here -->
+    </header>
     <%= yield %>
   </body>
 </html>
