--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,23 @@ nav ul li a {
 nav ul li a:hover {
   background-color: #555;
 }
+
+.dog-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.dog-item {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+  width: 220px;
+  text-align: center;
+}
+
+.dog-item img {
+  max-width: 100%;
+  height: auto; /
+}
