--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,3 +51,25 @@ nav ul li a:hover {
   max-width: 100%;
   height: auto; /
 }
+
+.breed-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.breed-link:hover {
+  text-decoration: underline;
+  color: #007BFF;
+}
+
+.back-link {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #007BFF;
+  text-decoration: none;
+}
+
+.back-link:hover {
+  text-decoration: underline;
+}
+
