--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,8 +1,8 @@
-<!-- app/views/layouts/_menu.html.erb -->
 <nav>
   <ul>
     <li><%= link_to 'Home', root_path %></li>
     <li><%= link_to 'About', about_path %></li>
+    <li><%= link_to 'Breeds', breeds_path %></li>
   </ul>
 </nav>
 <br>
